[gd_scene load_steps=26 format=3 uid="uid://baq5fam5xesra"]

[ext_resource type="PackedScene" uid="uid://d30ipjyyopunc" path="res://BaseScenes/BaseEntity/BaseEntity.tscn" id="1_s0eop"]
[ext_resource type="Script" uid="uid://bo2urmd8u6hwt" path="res://BaseScenes/BaseNodes/BaseStateManagerNode.gd" id="2_ft8w5"]
[ext_resource type="Script" uid="uid://bycwuf3w0etdn" path="res://Scenes/Player/player.gd" id="2_h54ih"]
[ext_resource type="PackedScene" uid="uid://cd4shomxx12md" path="res://temp/assets/mixamo/BaseCharacter.blend" id="3_ji083"]
[ext_resource type="Script" uid="uid://biai3ifmf1pj5" path="res://Scenes/Player/camera_3d.gd" id="4_825xp"]
[ext_resource type="Script" uid="uid://bbsuhw005il5g" path="res://Scenes/Player/ik.gd" id="4_esmjy"]
[ext_resource type="Script" uid="uid://0a3iovwytv30" path="res://BaseScenes/BaseNodes/BaseInputsNode.gd" id="4_t26db"]
[ext_resource type="PackedScene" uid="uid://dnblltv50fky0" path="res://Scenes/Weapons/Ranged/Ak/Ak.tscn" id="5_ji083"]
[ext_resource type="Script" uid="uid://bx6ji2vi4bco0" path="res://Scenes/Player/head_target_ik.gd" id="7_0kmp4"]
[ext_resource type="Script" uid="uid://dt7l4c1kofq27" path="res://Scenes/Player/interaction.gd" id="10_ji083"]
[ext_resource type="Script" uid="uid://dfuffywxc0cga" path="res://Scenes/Player/ledge_contact.gd" id="14_0u84n"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6tu5v"]
animation = &"weapon_2hand_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ji083"]
animation = &"run_f"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0kmp4"]
animation = &"walk_b"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i5acl"]
animation = &"walk_r"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_epg6k"]
animation = &"walk_l"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0u84n"]
animation = &"walk_f"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_esmjy"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_i5acl"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ji083")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_0kmp4")
blend_point_1/pos = Vector2(0, -0.5)
blend_point_2/node = SubResource("AnimationNodeAnimation_i5acl")
blend_point_2/pos = Vector2(0.5, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_epg6k")
blend_point_3/pos = Vector2(-0.5, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_0u84n")
blend_point_4/pos = Vector2(0, 0.5)
blend_point_5/node = SubResource("AnimationNodeAnimation_esmjy")
blend_point_5/pos = Vector2(0, 0)
sync = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_epg6k"]
graph_offset = Vector2(-719.6405, 108.91167)
nodes/locomotive/node = SubResource("AnimationNodeBlendSpace2D_i5acl")
nodes/locomotive/position = Vector2(-240, 140)
node_connections = [&"output", 0, &"locomotive"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_spxdj"]
graph_offset = Vector2(-757.2727, 24.20681)
nodes/output/position = Vector2(260, 120)
nodes/movements/node = SubResource("AnimationNodeBlendTree_epg6k")
nodes/movements/position = Vector2(-300, 80)
nodes/Animation/node = SubResource("AnimationNodeAnimation_6tu5v")
nodes/Animation/position = Vector2(-300, 240)
node_connections = [&"output", 0, &"Animation"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0kmp4"]
radius = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_ji083"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0u84n"]
radius = 0.63

[sub_resource type="BoxShape3D" id="BoxShape3D_825xp"]
size = Vector3(1, 1.960022, 1.1362305)

[node name="Player" instance=ExtResource("1_s0eop")]
collision_layer = 2
collision_mask = 1
script = ExtResource("2_h54ih")
is_third_person = false

[node name="CanvasLayer" type="CanvasLayer" parent="." index="0"]

[node name="CorssHair" type="Node2D" parent="CanvasLayer" index="0"]
visible = false

[node name="HO" type="Line2D" parent="CanvasLayer/CorssHair" index="0"]
position = Vector2(960, 540)
points = PackedVector2Array(-11, 0, 11, 0)
width = 5.0
default_color = Color(0, 0, 0, 1)

[node name="VO" type="Line2D" parent="CanvasLayer/CorssHair" index="1"]
position = Vector2(960, 540)
rotation = 1.5708
points = PackedVector2Array(-11, 0, 11, 0)
width = 5.0
default_color = Color(0, 0, 0, 1)

[node name="H" type="Line2D" parent="CanvasLayer/CorssHair" index="2"]
position = Vector2(960, 540)
points = PackedVector2Array(-10, 0, 10, 0)
width = 2.0

[node name="V" type="Line2D" parent="CanvasLayer/CorssHair" index="3"]
position = Vector2(960, 540)
rotation = 1.5708
points = PackedVector2Array(-10, 0, 10, 0)
width = 2.0

[node name="DotCorssHair" type="Node2D" parent="CanvasLayer" index="1"]

[node name="HO" type="Line2D" parent="CanvasLayer/DotCorssHair" index="0"]
position = Vector2(960, 540)
points = PackedVector2Array(-4, 0, 4, 0)
width = 5.0
default_color = Color(0, 0, 0, 1)

[node name="H" type="Line2D" parent="CanvasLayer/DotCorssHair" index="1"]
position = Vector2(960, 540)
points = PackedVector2Array(-2, 0, 2, 0)
width = 2.0

[node name="AnimationTree" type="AnimationTree" parent="." index="1"]
root_node = NodePath("../Model/BaseCharacter")
tree_root = SubResource("AnimationNodeBlendTree_spxdj")
anim_player = NodePath("../Model/BaseCharacter/AnimationPlayer")
parameters/movements/locomotive/blend_position = Vector2(0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Model" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.990911, 0)
visible = false
mesh = SubResource("CapsuleMesh_0kmp4")

[node name="BaseCharacter" parent="Model" index="1" instance=ExtResource("3_ji083")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Model/BaseCharacter/Armature" index="0"]
bones/0/position = Vector3(0.0043357816, 0.95932853, -0.0060809823)
bones/0/rotation = Quaternion(-0.110941626, -0.34026232, -0.027429974, 0.9333601)
bones/1/rotation = Quaternion(0.008809583, -0.0002971233, -0.0011667404, 0.99996054)
bones/2/rotation = Quaternion(0.14175068, 0.0006278706, -0.0066117276, 0.9898802)
bones/3/rotation = Quaternion(0.19884256, -0.00037642705, -0.0065322407, 0.9800096)
bones/4/rotation = Quaternion(0.0065305545, 0.065164484, 0.0076311687, 0.997824)
bones/5/rotation = Quaternion(-0.040347468, 0.19214614, 0.09004331, 0.9763935)
bones/7/rotation = Quaternion(-0.2926547, -0.33410242, 0.6686205, -0.5963853)
bones/8/rotation = Quaternion(0.47692117, -0.22433367, 0.31434825, 0.7895606)
bones/9/position = Vector3(-2.2351742e-08, 0.27404687, -8.445475e-09)
bones/9/rotation = Quaternion(2.689725e-07, 6.1779326e-07, 0.5371802, 0.8434675)
bones/10/rotation = Quaternion(-0.13325553, -0.8273914, -0.24643916, 0.48675883)
bones/11/rotation = Quaternion(0.22665022, -0.032488775, 0.13460475, 0.96408284)
bones/12/rotation = Quaternion(0.01364726, 0.16939132, -0.06316172, 0.9834282)
bones/13/rotation = Quaternion(-0.011622083, 0.013098767, 0.0923104, 0.9955763)
bones/15/rotation = Quaternion(0.31514177, -0.012591295, -0.031965774, 0.94842255)
bones/16/rotation = Quaternion(0.4994672, -4.415283e-07, -0.05118394, 0.86481947)
bones/17/rotation = Quaternion(0.20905682, -1.474141e-07, -0.021423334, 0.9776688)
bones/19/rotation = Quaternion(0.44175288, -0.018085832, -0.04469099, 0.8958404)
bones/20/rotation = Quaternion(0.536291, -2.3560145e-07, -0.05495708, 0.84224206)
bones/21/rotation = Quaternion(0.15493052, -2.0482919e-07, -0.015876967, 0.9877978)
bones/23/rotation = Quaternion(0.50692606, -0.025955608, -0.04272362, 0.8605389)
bones/24/rotation = Quaternion(0.5860038, -1.9362179e-07, -0.060051907, 0.8080801)
bones/25/rotation = Quaternion(0.22263922, -3.0577965e-07, -0.022815378, 0.97463393)
bones/27/rotation = Quaternion(0.59093297, -0.0695233, 0.001901802, 0.80371714)
bones/28/rotation = Quaternion(0.5288144, -3.8485e-07, -0.054191116, 0.84700584)
bones/29/rotation = Quaternion(0.12210331, 1.7787025e-07, -0.012512722, 0.99243855)
bones/31/rotation = Quaternion(0.22665022, -0.032488775, 0.13460475, 0.96408284)
bones/32/rotation = Quaternion(0.01364726, 0.16939132, -0.06316172, 0.9834282)
bones/33/rotation = Quaternion(-0.011622083, 0.013098767, 0.0923104, 0.9955763)
bones/34/rotation = Quaternion(0.31514177, -0.012591295, -0.031965774, 0.94842255)
bones/35/rotation = Quaternion(0.4994672, -4.415283e-07, -0.05118394, 0.86481947)
bones/36/rotation = Quaternion(0.20905682, -1.474141e-07, -0.021423334, 0.9776688)
bones/37/rotation = Quaternion(0.44175288, -0.018085832, -0.04469099, 0.8958404)
bones/38/rotation = Quaternion(0.536291, -2.3560145e-07, -0.05495708, 0.84224206)
bones/39/rotation = Quaternion(0.15493052, -2.0482919e-07, -0.015876967, 0.9877978)
bones/40/rotation = Quaternion(0.50692606, -0.025955608, -0.04272362, 0.8605389)
bones/41/rotation = Quaternion(0.5860038, -1.9362179e-07, -0.060051907, 0.8080801)
bones/42/rotation = Quaternion(0.22263922, -3.0577965e-07, -0.022815378, 0.97463393)
bones/43/rotation = Quaternion(0.59093297, -0.0695233, 0.001901802, 0.80371714)
bones/44/rotation = Quaternion(0.5288144, -3.8485e-07, -0.054191116, 0.84700584)
bones/45/rotation = Quaternion(0.12210331, 1.7787025e-07, -0.012512722, 0.99243855)
bones/46/rotation = Quaternion(0.1869084, -0.3878237, 0.72194034, 0.5417197)
bones/47/rotation = Quaternion(0.47266603, -0.17944284, -0.61429214, 0.60583186)
bones/48/rotation = Quaternion(1.937526e-07, -3.1279328e-07, -0.75720054, 0.6531826)
bones/49/rotation = Quaternion(-0.16073997, 0.38935605, 0.24042705, 0.8745053)
bones/50/rotation = Quaternion(0.34925833, 0.027552512, -0.1511218, 0.92434937)
bones/51/rotation = Quaternion(-0.111919425, -0.1879428, 0.21084394, 0.952731)
bones/52/rotation = Quaternion(-0.27212992, -0.018246759, 0.40784055, 0.87136585)
bones/54/rotation = Quaternion(0.10823117, 0.0063949935, -0.015483774, 0.9939846)
bones/55/rotation = Quaternion(0.28294945, 3.4383433e-07, 0.023049371, 0.95885783)
bones/56/rotation = Quaternion(0.25670296, 1.03371676e-07, 0.020911409, 0.9662641)
bones/58/rotation = Quaternion(0.43297973, 0.000537805, 0.06933622, 0.89873284)
bones/59/rotation = Quaternion(0.8193021, 3.2055692e-07, 0.066742055, 0.56946427)
bones/60/rotation = Quaternion(0.16319907, 2.80387e-07, 0.013294673, 0.9865036)
bones/62/rotation = Quaternion(0.47749674, 0.03650706, 0.0059719672, 0.87785447)
bones/63/rotation = Quaternion(0.76164836, 5.6484134e-07, 0.06204576, 0.6450132)
bones/64/rotation = Quaternion(0.42496902, 3.2149995e-07, 0.034619085, 0.90454566)
bones/66/rotation = Quaternion(0.5346115, 0.044866588, 0.005713684, 0.8438868)
bones/67/rotation = Quaternion(0.6580615, 7.6633336e-07, 0.053607177, 0.7510535)
bones/68/rotation = Quaternion(0.4973827, 2.9124487e-07, 0.04051823, 0.8665845)
bones/70/rotation = Quaternion(0.34925833, 0.027552512, -0.1511218, 0.92434937)
bones/71/rotation = Quaternion(-0.111919425, -0.1879428, 0.21084394, 0.952731)
bones/72/rotation = Quaternion(-0.27212992, -0.018246759, 0.40784055, 0.87136585)
bones/73/rotation = Quaternion(0.10823117, 0.0063949935, -0.015483774, 0.9939846)
bones/74/rotation = Quaternion(0.28294945, 3.4383433e-07, 0.023049371, 0.95885783)
bones/75/rotation = Quaternion(0.25670296, 1.03371676e-07, 0.020911409, 0.9662641)
bones/76/rotation = Quaternion(0.43297973, 0.000537805, 0.06933622, 0.89873284)
bones/77/rotation = Quaternion(0.8193021, 3.2055692e-07, 0.066742055, 0.56946427)
bones/78/rotation = Quaternion(0.16319907, 2.80387e-07, 0.013294673, 0.9865036)
bones/79/rotation = Quaternion(0.47749674, 0.03650706, 0.0059719672, 0.87785447)
bones/80/rotation = Quaternion(0.76164836, 5.6484134e-07, 0.06204576, 0.6450132)
bones/81/rotation = Quaternion(0.42496902, 3.2149995e-07, 0.034619085, 0.90454566)
bones/82/rotation = Quaternion(0.5346115, 0.044866588, 0.005713684, 0.8438868)
bones/83/rotation = Quaternion(0.6580615, 7.6633336e-07, 0.053607177, 0.7510535)
bones/84/rotation = Quaternion(0.4973827, 2.9124487e-07, 0.04051823, 0.8665845)
bones/85/rotation = Quaternion(0.40294057, 0.06900472, 0.90101206, -0.1451022)
bones/86/rotation = Quaternion(-0.20877963, -1.322609e-06, -2.9738658e-07, 0.97796273)
bones/87/rotation = Quaternion(0.5221576, -0.006836565, 0.0066636107, 0.8527956)
bones/88/rotation = Quaternion(0.22768162, -0.032521628, -0.015365245, 0.9730711)
bones/90/rotation = Quaternion(0.037424304, -0.03821953, 0.9975347, 0.045423254)
bones/91/rotation = Quaternion(-0.28589994, 9.4298605e-07, 2.9876176e-07, 0.9582596)
bones/92/rotation = Quaternion(0.67547387, 0.14561115, -0.035894774, 0.72197235)
bones/93/rotation = Quaternion(0.22755657, 0.032120615, 0.015256271, 0.97311544)
bones/96/position = Vector3(0.0043963664, 0.95932835, -0.0060373098)
bones/96/rotation = Quaternion(-0.11080313, -0.34492496, -0.02798434, 0.93164724)
bones/97/rotation = Quaternion(1, 2.3797686e-09, 4.2522155e-05, -7.4504176e-09)
bones/98/rotation = Quaternion(1, 1.913791e-09, 4.252099e-05, 2.1657779e-14)
bones/99/rotation = Quaternion(0.14510511, 0.9009949, -0.06899852, 0.40297893)
bones/100/rotation = Quaternion(-0.20878163, -1.3408868e-06, -2.9652264e-07, 0.97796226)
bones/106/rotation = Quaternion(-0.045412526, 0.9975325, 0.038221523, 0.03749326)
bones/107/rotation = Quaternion(-0.28589982, 9.1768186e-07, 2.9151116e-07, 0.9582595)
bones/113/rotation = Quaternion(0.008809583, -0.00029712054, -0.0011667372, 0.99996054)
bones/114/rotation = Quaternion(0.14175068, 0.0006278706, -0.0066117276, 0.9898802)
bones/115/rotation = Quaternion(0.19884256, -0.00037642705, -0.0065322407, 0.9800096)
bones/116/rotation = Quaternion(0.0065305545, 0.065164484, 0.0076311687, 0.997824)
bones/117/rotation = Quaternion(-0.040347468, 0.19214614, 0.09004331, 0.9763935)
bones/118/rotation = Quaternion(-0.29265463, -0.33410242, 0.66862047, -0.59638536)
bones/119/rotation = Quaternion(0.47692123, -0.22433373, 0.31434825, 0.78956056)
bones/120/rotation = Quaternion(2.7951396e-07, 6.1795595e-07, 0.5371802, 0.84346765)
bones/121/position = Vector3(0.18938471, 0.082611494, -0.005055066)
bones/124/rotation = Quaternion(0.1869084, -0.3878237, 0.72194034, 0.5417197)
bones/125/rotation = Quaternion(0.47266588, -0.17944524, -0.6142903, 0.6058333)
bones/126/rotation = Quaternion(1.8200173e-07, -3.196043e-07, -0.7572005, 0.65318257)
bones/127/position = Vector3(-0.18086651, 0.076556444, -0.038622476)
bones/127/rotation = Quaternion(-0.50118417, 0.50163925, -0.49880993, -0.49835852)
bones/130/position = Vector3(0.13715437, 1.0327823, 0.5113293)
bones/130/rotation = Quaternion(-0.7071069, 6.124464e-08, -2.1073411e-08, 0.70710665)
bones/131/position = Vector3(-0.040400386, 1.3804953, 0.5201025)
bones/131/rotation = Quaternion(0.25285625, -0.643918, -0.6794512, -0.24449834)
bones/132/position = Vector3(-0.41486198, 1.0552272, 0.14751813)
bones/132/rotation = Quaternion(-0.7071069, 6.124464e-08, -2.1073411e-08, 0.70710665)
bones/133/position = Vector3(-0.1429466, 1.3321744, 0.19081195)
bones/133/rotation = Quaternion(0.45586863, 0.557514, 0.48993617, 0.49124807)
bones/134/position = Vector3(0.13335846, 0.10492224, 0.21577479)
bones/134/rotation = Quaternion(0.08271382, 0.702253, 0.70225227, -0.08271043)
bones/135/position = Vector3(-2.598069e-07, 8.423987e-07, -4.1122034e-06)
bones/135/rotation = Quaternion(-0.2358054, 0.028307406, -0.006871506, 0.97136366)
bones/137/rotation = Quaternion(0.22768727, -0.032522306, -0.01536564, 0.9730698)
bones/138/position = Vector3(8.7782354e-08, -2.2713214e-06, 1.1220104e-06)
bones/138/rotation = Quaternion(-5.7960287e-06, 6.912521e-07, 4.065285e-07, 1)
bones/146/rotation = Quaternion(-0.02912437, 1.9264124e-09, 0.9995758, 9.949911e-09)
bones/148/rotation = Quaternion(-1.4476981e-07, 9.182261e-07, -1.5136905e-07, 1)
bones/150/position = Vector3(0.18778832, 0.6107294, 0.6274457)
bones/150/rotation = Quaternion(-0.7071069, -1.05371285e-08, -5.2682423e-09, 0.70710665)
bones/151/position = Vector3(-0.054784715, 0.11054904, -0.18166992)
bones/151/rotation = Quaternion(-0.32875597, 0.6260357, 0.626035, 0.3287539)
bones/152/position = Vector3(1.3634941e-06, -1.7912961e-06, -9.165642e-06)
bones/152/rotation = Quaternion(-0.2357878, -0.028307023, 0.0068746614, 0.97136796)
bones/154/rotation = Quaternion(0.22768654, 0.032118946, 0.015254573, 0.97308505)
bones/155/position = Vector3(-1.5215095e-07, -2.386456e-06, 1.1500094e-06)
bones/155/rotation = Quaternion(-0.00013373278, 3.0529727e-06, -3.303966e-06, 1)
bones/163/rotation = Quaternion(0.029125016, 4.2348907e-09, 0.99957585, 4.8381796e-09)
bones/165/rotation = Quaternion(-0.00012783245, 3.4851168e-06, -2.8043448e-06, 1)
bones/167/position = Vector3(-0.38785508, 0.43326727, 0.3086777)
bones/167/rotation = Quaternion(-0.7071069, -5.2682836e-08, -7.375676e-08, 0.70710665)

[node name="HandAttachBone" type="BoneAttachment3D" parent="Model/BaseCharacter/Armature/Skeleton3D" index="2"]
transform = Transform3D(-0.027523935, -0.0011850912, 0.99962074, 0.99496394, 0.09638315, 0.027510047, -0.096379094, 0.9953436, -0.0014734417, -0.18019688, 1.3825493, 0.17182937)
bone_name = "mixamorig_RightHand"
bone_idx = 49

[node name="Offset" type="Marker3D" parent="Model/BaseCharacter/Armature/Skeleton3D/HandAttachBone" index="0"]
transform = Transform3D(0.023306573, 0.99235755, 0.10522439, 0.005159557, 0.10468741, -0.9968385, -0.99913454, 0.02368909, -0.0026931614, 0.0309515, 0.16925848, 0.03604719)

[node name="Ak" parent="Model/BaseCharacter/Armature/Skeleton3D/HandAttachBone/Offset" index="0" instance=ExtResource("5_ji083")]
sleeping = true
freeze = true

[node name="Head_IK" type="SkeletonIK3D" parent="Model/BaseCharacter/Armature/Skeleton3D" index="3"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 1.1745679e-07, 0, -1.3435488)
influence = 0.8
root_bone = &"mixamorig_Spine"
tip_bone = &"mixamorig_Head"
target_node = NodePath("../../../../../HeadTarget_IK")
script = ExtResource("4_esmjy")

[node name="GodotIK" type="GodotIK" parent="Model/BaseCharacter/Armature/Skeleton3D" index="4"]

[node name="RightHand_IK" type="GodotIKEffector" parent="Model/BaseCharacter/Armature/Skeleton3D/GodotIK" index="0"]
bone_name = "mixamorig_RightHand"
bone_idx = 49
chain_length = 3
transform_mode = 3
transform = Transform3D(-0.027523972, -0.0011851038, 0.9996206, 0.9949641, 0.096383505, 0.027510071, -0.0963794, 0.9953436, -0.0014737382, -0.18019699, 1.3825493, 0.17182949)

[node name="LeftHand_IK" type="GodotIKEffector" parent="Model/BaseCharacter/Armature/Skeleton3D/GodotIK" index="1"]
bone_name = "mixamorig_LeftHand"
bone_idx = 10
chain_length = 3
transform_mode = 3
transform = Transform3D(-0.6125491, -0.784479, 0.0968324, 0.06796616, 0.069778085, 0.99524456, -0.787505, 0.61621726, 0.010575333, -0.0739235, 1.3997895, 0.47904667)

[node name="Pitch" type="Node3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 0.9999999, 0, 0, 0, 0.9999999, 0, 1.1168513, 0)

[node name="Yaw" type="Node3D" parent="Pitch" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.9999999, 0, 0, 0, 0.9999999, 0, 0.5781255, -0.10221113)

[node name="CameraSpringArm3D" type="SpringArm3D" parent="Pitch/Yaw" index="0"]
transform = Transform3D(1, 0, 0, 0, 1.0000001, 0, 0, 0, 1.0000001, 0, 0, 0)
shape = SubResource("SphereShape3D_ji083")
spring_length = 0.0

[node name="Camera3D" type="Camera3D" parent="Pitch/Yaw/CameraSpringArm3D" index="0"]
transform = Transform3D(1, 0, -4.7683716e-07, 0, 1, 0, 4.7683716e-07, 0, 1, 0.64, 0.135, 1.153)
cull_mask = 1048569
doppler_tracking = 2
current = true
fov = 90.0
near = 0.08
script = ExtResource("4_825xp")

[node name="HeadTarget_IK" type="Marker3D" parent="." index="4"]
transform = Transform3D(-0.9999999, 5.489316e-09, -8.725022e-08, 0, 0.9980262, 0.06279045, 8.742277e-08, 0.06279045, -0.9980262, 0, 1.60096, -0.010959998)
script = ExtResource("7_0kmp4")
look_slider = -0.40000000000000036

[node name="RightHandTarget_IK" type="Marker3D" parent="HeadTarget_IK" index="0"]
transform = Transform3D(-0.073861755, -0.025525186, 0.99694175, 0.99470574, 0.06973145, 0.07548125, -0.07144491, 0.9972389, 0.020239579, -0.13376084, -0.1928885, 0.22401574)

[node name="LefttHandTarget_IK" type="Marker3D" parent="HeadTarget_IK" index="1"]
transform = Transform3D(-0.5053335, -0.8422615, 0.18770981, 0.37781048, -0.020379348, 0.92565876, -0.77582127, 0.53868514, 0.32851318, -0.067485295, -0.16377771, 0.49737152)

[node name="Camera3D" type="Camera3D" parent="HeadTarget_IK" index="2"]
transform = Transform3D(-1.0000001, 0, -8.742282e-08, 0, 1.0000005, 0, 8.7422784e-08, 0, -1.0000005, -0.011636771, 0.08351387, 0.07410443)
cull_mask = 1048569
doppler_tracking = 2
current = true
fov = 90.0
near = 0.08
script = ExtResource("4_825xp")

[node name="BaseStateManagerNode" type="Node" parent="." index="5"]
script = ExtResource("2_ft8w5")
metadata/_custom_type_script = "uid://bo2urmd8u6hwt"

[node name="BaseInputsNode" type="Node" parent="." index="6"]
script = ExtResource("4_t26db")
metadata/_custom_type_script = "uid://0a3iovwytv30"

[node name="LedgeContact" type="Node3D" parent="." index="7"]
script = ExtResource("14_0u84n")

[node name="TopRay" type="RayCast3D" parent="LedgeContact" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, -0.350441)
target_position = Vector3(0, 0, -0.21)

[node name="FloorRay" type="RayCast3D" parent="LedgeContact/TopRay" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05)
target_position = Vector3(0, -0.4, 0)

[node name="BottomRay" type="RayCast3D" parent="LedgeContact" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
target_position = Vector3(0, 0, -0.5)

[node name="CollisionShape3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.987031, 0)
visible = false
shape = SubResource("CapsuleShape3D_0u84n")

[node name="InteractionArea" type="Area3D" parent="." index="9"]
visible = false
collision_layer = 0
collision_mask = 12
script = ExtResource("10_ji083")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.98686385, -0.5078702)
shape = SubResource("BoxShape3D_825xp")
debug_color = Color(0.06482514, 0.649749, 0.033422377, 0.41960785)

[editable path="Model/BaseCharacter"]
